Closed Bug 877390 Opened 11 years ago Closed 11 years ago

crash in nsGlobalWindow::FinalClose

Categories

(Core :: DOM: Core & HTML, defect)

24 Branch
All
Windows 7
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla24
Tracking Status
firefox23 --- unaffected
firefox24 --- verified

People

(Reporter: scoobidiver, Assigned: bholley)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

It first showed up in 24.0a1/20130523. The regression range is: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=c21ef3664c67&tochange=00b264c7cced It's likely a regression from bug 841312. Signature nsGlobalWindow::FinalClose() More Reports Search UUID c0d353af-5126-4f32-b294-9a6132130529 Date Processed 2013-05-29 12:46:36 Uptime 435 Install Age 7.2 minutes since version was first installed. Install Time 2013-05-29 12:42:54 Product Firefox Version 24.0a1 Build ID 20130528030942 Release Channel nightly OS Windows NT OS Version 5.1.2600 Service Pack 3 Build Architecture x86 Build Architecture Info AuthenticAMD family 16 model 2 stepping 3 Crash Reason EXCEPTION_ACCESS_VIOLATION_READ Crash Address 0x0 App Notes AdapterVendorID: 0x1002, AdapterDeviceID: 0x9610, AdapterSubsysID: 00001002, AdapterDriverVersion: 8.582.0.0 D3D10 Layers? D3D10 Layers- D3D9 Layers? D3D9 Layers- Processor Notes sp-processor03_phx1_mozilla_com_19361:2012; non-integer value of "SecondsSinceLastCrash" EMCheckCompatibility True Adapter Vendor ID 0x1002 Adapter Device ID 0x9610 Total Virtual Memory 2147352576 Available Virtual Memory 1773817856 System Memory Use Percentage 54 Available Page File 3003846656 Available Physical Memory 858775552 Accessibility Active Frame Module Signature Source 0 xul.dll nsGlobalWindow::FinalClose dom/base/nsGlobalWindow.cpp:7070 1 xul.dll nsGlobalWindow::Close dom/base/nsGlobalWindow.cpp:7018 2 xul.dll nsGlobalWindow::Close dom/base/nsGlobalWindow.cpp:6953 3 xul.dll NS_InvokeByIndex xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:70 4 xul.dll XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:1485 5 mozjs.dll js::Invoke js/src/jsinterp.cpp:395 6 mozjs.dll js::Interpret js/src/jsinterp.cpp:2217 7 mozjs.dll js::RunScript js/src/jsinterp.cpp:352 8 mozjs.dll js::Invoke js/src/jsinterp.cpp:441 9 mozjs.dll JS_CallFunctionValue js/src/jsapi.cpp:5871 10 xul.dll mozilla::dom::EventHandlerNonNull::Call obj-firefox/dom/bindings/EventHandlerBinding.cpp:43 11 xul.dll mozilla::dom::EventHandlerNonNull::Call<nsISupports*> obj-firefox/dist/include/mozilla/dom/EventHandlerBinding.h:58 12 xul.dll nsJSEventListener::HandleEvent dom/src/events/nsJSEventListener.cpp:247 13 xul.dll nsEventListenerManager::HandleEventSubType content/events/src/nsEventListenerManager.cpp:937 14 xul.dll nsEventListenerManager::HandleEventInternal content/events/src/nsEventListenerManager.cpp:1009 15 xul.dll nsEventTargetChainItem::HandleEventTargetChain content/events/src/nsEventDispatcher.cpp:329 16 xul.dll nsEventDispatcher::Dispatch content/events/src/nsEventDispatcher.cpp:635 17 xul.dll nsEventDispatcher::DispatchDOMEvent content/events/src/nsEventDispatcher.cpp:693 18 xul.dll nsINode::DispatchEvent content/base/src/nsINode.cpp:1133 19 xul.dll nsContentUtils::DispatchXULCommand content/base/src/nsContentUtils.cpp:5656 20 xul.dll nsXULElement::PreHandleEvent content/xul/content/src/nsXULElement.cpp:1204 21 xul.dll nsEventDispatcher::Dispatch content/events/src/nsEventDispatcher.cpp:558 22 xul.dll nsEventDispatcher::DispatchDOMEvent content/events/src/nsEventDispatcher.cpp:693 23 xul.dll PresShell::HandleDOMEventWithTarget layout/base/nsPresShell.cpp:6996 24 xul.dll nsContentUtils::DispatchXULCommand content/base/src/nsContentUtils.cpp:5650 25 xul.dll nsButtonBoxFrame::DoMouseClick layout/xul/base/src/nsButtonBoxFrame.cpp:141 26 xul.dll nsScrollbarButtonFrame::MouseClicked layout/xul/base/src/nsButtonBoxFrame.h:32 27 xul.dll nsButtonBoxFrame::HandleEvent layout/xul/base/src/nsButtonBoxFrame.cpp:98 28 xul.dll nsPresShellEventCB::HandleEvent layout/base/nsPresShell.cpp:498 29 xul.dll nsEventTargetChainItem::HandleEventTargetChain content/events/src/nsEventDispatcher.cpp:375 30 xul.dll nsEventDispatcher::Dispatch content/events/src/nsEventDispatcher.cpp:635 31 mozglue.dll imalloc memory/mozjemalloc/jemalloc.c:4247 32 xul.dll nsCOMArray_base::InsertObjectAt obj-firefox/xpcom/build/nsCOMArray.cpp:117 ... More reports at: https://crash-stats.mozilla.com/report/list?signature=nsGlobalWindow%3A%3AFinalClose%28%29
Assignee: nobody → bobbyholley+bmo
Who knows why this happens, but this appears to be the culprit per crash reports.
Attachment #755697 - Flags: review?(bzbarsky)
Comment on attachment 755697 [details] [diff] [review] Do a blind null check. v1 r=me, I guess...
Attachment #755697 - Flags: review?(bzbarsky) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
QA Contact: manuela.muntean
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: