Bug 877390 - Do a blind null check. r=bz

Who knows why this happens, but this appears to be the culprit per crash
reports.